<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ConverterActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/cmInput"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="180dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:hint="@string/value_in_cm" app:backgroundTint="@color/colorPrimaryDark"/>

    <Button
            android:text="@string/converterbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/ConverterButton"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cmInput"
            app:layout_constraintVertical_bias="0.042"
            tools:visibility="visible" app:backgroundTint="@color/colorPrimaryDark"/>

    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inchesOutput"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ConverterButton"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.166"/>

    <Button
            android:text="@string/next_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/NextActivity2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/inchesOutput"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:backgroundTint="@color/colorPrimaryDark"/>

</android.support.constraint.ConstraintLayout>