<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <EditText
            android:id="@+id/newTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/enter_title"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/newContent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:backgroundTint="@color/colorPrimaryDark"/>

    <EditText
            android:id="@+id/newContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_content"
            android:inputType="text"
            android:layout_marginTop="92dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.066"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" app:backgroundTint="@color/colorPrimaryDark"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center"
                  android:layout_marginBottom="8dp"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginTop="8dp"
                  app:layout_constraintTop_toBottomOf="@+id/newContent"
                  app:layout_constraintVertical_bias="0.061"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="8dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="8dp">
        <Button
                android:id="@+id/addButton"
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/newContent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.073"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:backgroundTint="@color/colorPrimaryDark"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>